2008-10-13  David Teller  <David.Teller@univ-orleans.fr>

	* src/main/nothreads/batteries.mllib: removed numerous modules

	* src/main/threads/batteries.mllib: removed numerous modules

	* src/core/batteries_core.ml: now using [ExtPrintf.Printf] instead of [IO.Printf]

	* src/core/extlib/extPrintf.ml*: created

	* src/core/extlib.mlpack: [ExtPrintf] added

	* examples/shuffle.ml: adapted to new order of arguments in [Array.print]

	* myocamlbuild.ml: [rule ".packed.ml to .odoc"] and [rule ".mlpack to .packed.ml"] added

	* build/intro.text: prefixed links to internal pages with "Inner."

	* src/core/extlib/bitSet.ml*: [print] added

	* src/core/extlib/extNativeint.ml: [print] now uses [InnerIO]

	* src/core/extlib/extList.ml: [print] now uses [InnerIO]

	* src/core/extlib/extList.ml: merged both implementations of [print]

	* src/core/extlib/extArray.ml: [print] now uses [InnerIO]

	* src/core/extlib/IO.ml: [stdin], [stdout], [stderr], [stdnull] moved to innerIO.ml*

	* src/core/extlib/IO.ml*: [Printf] moved to innerIO.ml*

	* src/core/toolchain/batlib_Sexp_Conv.mli: references [Extlib.InnerIO] instead of [Extlib.IO]

	* src/core/extlib.mlpack: [InnerIO] added

	* src/core/extlib/extInt32.ml: [print] added

	* src/core/extlib/extInt64.ml*: [print] added

	* src/core/extlib/extFloat.ml*: [print] added

	* src/core/extlib/extUnit.ml*: [print] added
	
	* src/core/extlib/extUnit.ml: [unit_string] added

	* src/core/extlib/extChar.ml*: [print] added

	* src/core/extlib/extComplex.ml*: [print] added

	* src/core/extlib/extBool.ml*: [print] added

	* src/core/extlib/extNum.ml*: [print] added

	* src/core/extlib/extInt.ml*: [print] added

	* src/core/extlib/extInt.ml: [ ( -- ) ] and [ ( --- )] moved to [BaseInt]

	* src/core/extlib/extUTF8.ml*: [print] added

	* src/core/extlib/rope.ml*: [print] added
