@@ -1,4 +1,7 @@
 2008-10-13  David Teller  <David.Teller@univ-orleans.fr>
+	* Makefile: target [odoc_generator_batlib.cmo] removed
+
+	* Makefile: [install] now installing [extlib.cmi]
 
 	* src/main/nothreads/batteries.mllib: removed numerous modules
 
